--- a/client/index.html
+++ b/client/index.html
@@ -12,4 +12,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="https://app.tudongchat.com/js/chatbox.js"></script>
+<script>
+  const tudong_chatbox = new TuDongChat('oGAgNdq-Fp2vs-MofFmJt')
+  tudong_chatbox.initial()
+</script>
 </html>
